# redcell

./: .gitignore  LICENSE  NOTICE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README.md  make_demo.py
evaluation/: __init__.py  run_eval.py
examples/: programmatic_scan.py
redcell/: __init__.py  cli.py  engine.py  models.py  report.py
redcell/detectors/: __init__.py  llm_judge.py  rules.py  tools.py
redcell/probes/: __init__.py  base.py  excessive_agency.py  indirect_injection.py  output_and_misinfo.py  prompt_injection.py  sensitive_info.py  system_prompt_leak.py
redcell/targets/: __init__.py  base.py  mcp.py  mock.py  openai_compat.py
tests/: mock_mcp_server.py  test_docstrings.py  test_evaluation.py  test_fail_on.py  test_indirect_injection.py  test_live_model.py  test_mcp_agent.py  test_probes.py  test_version.py
